# wasi_processor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: Cargo.toml  main.rs  mlx_output.rs  mlx_wrapper.rs
processor/: Cargo.toml  io.rs  lib.rs  processor_utils.rs  tensor.rs
processor/auto/: mod.rs  processing_auto.rs  tokenization_auto.rs
processor/gemma3/: detokenizer.rs  image_processor.rs  mod.rs  processor.rs  tokenizer.rs
