[workspace]
resolver = "2"
members = [
    "processor",
    "example"
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.21.1", default-features = false, features = ["unstable_wasm"] }
image = "0.25"
ndarray = "0.16.1"
libc = "0.2"
mlx-rs = "0.23.0"
mlx-sys = "0.1.2-release"