[package]
name = "rust_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_processor"
path = "lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
libc = { workspace = true } 